# JobHub

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose-dev.yaml  pyproject.toml
src/accounts/: admin.py  backends.py  signals.py
src/accounts/migrations/: 0001_initial.py  0002_alter_client_first_name_alter_client_last_name_and_more.py
src/accounts/models/: __init__.py  email_confirmation_code.py  managers.py  profile.py  social_link.py  user.py
src/accounts/presentation/api_v1/: urls.py
src/accounts/presentation/api_v1/views/: __init__.py  profile.py
src/accounts/presentation/common/: validators.py
src/accounts/presentation/web/: urls.py
src/accounts/presentation/web/forms/: __init__.py  login.py  profile.py  registration.py
src/accounts/presentation/web/templates/: login.html  profile.html  profile_edit.html  registration.html
src/accounts/presentation/web/views/: __init__.py  login.py  profile.py  registration.py
src/core/business_logic/dto/: __init__.py  login.py  profile.py
src/core/business_logic/services/: __init__.py  common.py  confirm_email.py  login.py  profile.py  user.py
src/core/presentation/common/: __init__.py  converters.py
src/core/presentation/web/: urls.py
src/core/presentation/web/templates/: index.html
src/jobhub/: asgi.py  logger_formatter.py  settings.py  urls.py  wsgi.py
src/static/css/: base.css
src/static/css/accounts/: login.css  profile.css  profile_edit.css  registration.css
src/static/css/core/: index.css
src/templates/: base.html
src/templates/email/: register.txt
(+2 files in other folders)
