[tool.poetry]
name = "jobhub"
version = "0.1.0"
description = ""
authors = ["san0kq <sanromanov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
dacite = "^1.8.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
